--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/ItemView.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/ItemView.axaml
@@ -2,17 +2,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:appcore="using:FileTime.App.Core.ViewModels"
 			 xmlns:appcoreenums="using:FileTime.App.Core.Models.Enums"
+			 xmlns:guiappvm="using:FileTime.GuiApp.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="FileTime.GuiApp.Views.ItemView"
 			 x:Name="ItemRoot"
 			 HorizontalContentAlignment="Stretch"
 			 HorizontalAlignment="Stretch"
-			 Background="{Binding ViewMode,Converter={StaticResource ItemViewModeToBackgroundConverter}}">
+			 Background="{Binding ViewMode^,Converter={StaticResource ItemViewModeToBackgroundConverter}}"
+			 x:CompileBindings="True"
+			 x:DataType="appcore:IItemViewModel">
 	<Grid ColumnDefinitions="20,*,Auto" Margin="3" x:Name="RootGrid">
 		<Grid.Styles>
 			<Style Selector="TextBlock">
-				<Setter Property="Foreground" Value="{Binding DataContext.ViewMode,Converter={StaticResource ItemViewModeToForegroundConverter},ElementName=ItemRoot}"/>
+				<Setter x:CompileBindings="False" Property="Foreground" Value="{Binding DataContext.ViewMode^,Converter={StaticResource ItemViewModeToForegroundConverter},ElementName=ItemRoot}"/>
 			</Style>
 		</Grid.Styles>
 		<!--Image
@@ -42,7 +46,7 @@
 				</ItemsPanelTemplate>
 			</ItemsControl.ItemsPanel>
 			<ItemsControl.ItemTemplate>
-				<DataTemplate>
+				<DataTemplate x:DataType="guiappvm:ItemNamePartViewModel">
 					<Grid>
 						<TextBlock
 							Text="{Binding Text}"
@@ -55,7 +59,8 @@
 		<Grid Grid.Column="2" IsVisible="{Binding ShowAttributes,ElementName=ItemRoot}">
 			<Grid ColumnDefinitions="50,50,90,40,45"
 				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.File}}">
+				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.File}}"
+				  x:DataType="appcore:IFileViewModel">
 
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding BaseItem.DisplayName, Converter={StaticResource GetFileExtensionConverter}}"/>
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="1" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}"/>
@@ -65,21 +70,24 @@
 			</Grid>
 			<Grid ColumnDefinitions="90,40,45"
 				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.Container}}">
+				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.Container}}"
+				  x:DataType="appcore:IContainerViewModel">
 
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding Item.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=yyyy-MM-dd}"/>
+				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=yyyy-MM-dd}"/>
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="1" Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=hh:mm}"/>
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="2" Text="{Binding BaseItem.Attributes}"/>
 			</Grid>
 			<Grid ColumnDefinitions="50,90,40,45"
 				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.SizeContainer}}">
+				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.SizeContainer}}"
+				  x:DataType="appcore:IContainerSizeContainerViewModel">
 
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}"/>
 			</Grid>
 			<Grid ColumnDefinitions="50,50"
 				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.Element}}">
+				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.Element}}"
+				  x:DataType="appcore:IElementViewModel">
 
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding BaseItem.DisplayName, Converter={StaticResource GetFileExtensionConverter}}"/>
 				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="1" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}"/>
