--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -1,145 +1,208 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="using:FileTime.GuiApp.ViewModels"
-		xmlns:corevm="using:FileTime.App.Core.ViewModels"
-		xmlns:local="using:FileTime.GuiApp.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-	    InputElement.KeyDown="OnKeyDown"
-	    Opened="OnWindowOpened"
-        x:Class="FileTime.GuiApp.Views.MainWindow"
-        Icon="/Assets/filetime.ico"
-        Title="FileTime"
-		TransparencyLevelHint="Blur"
-		Background="Transparent"
-		ExtendClientAreaToDecorationsHint="True"
-		x:DataType="vm:IMainWindowViewModelBase"
-		x:CompileBindings="True">
+<Window
+    Background="Transparent"
+    ExtendClientAreaToDecorationsHint="True"
+    Icon="/Assets/filetime.ico"
+    InputElement.KeyDown="OnKeyDown"
+    Opened="OnWindowOpened"
+    Title="FileTime"
+    TransparencyLevelHint="Blur"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d"
+    x:Class="FileTime.GuiApp.Views.MainWindow"
+    x:CompileBindings="True"
+    x:DataType="vm:IMainWindowViewModelBase"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:corevm="using:FileTime.App.Core.ViewModels"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:FileTime.GuiApp.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:FileTime.GuiApp.ViewModels"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Design.DataContext>
+        <vm:MainWindowViewModel />
+    </Design.DataContext>
 
-	<Grid Background="{DynamicResource AppBackgroundBrush}">
-		<Grid IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}}" x:DataType="vm:MainWindowViewModel">
-			<Grid ColumnDefinitions="250,*" RowDefinitions="Auto,*">
-				<Grid PointerPressed="HeaderPointerPressed">
-					<Rectangle Fill="#01000000"/>
-					<TextBlock Margin="15,10" Text="{Binding Title}"/>
-				</Grid>
+    <Grid Background="{DynamicResource AppBackgroundBrush}">
+        <Grid IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}}" x:DataType="vm:MainWindowViewModel">
+            <Grid ColumnDefinitions="250,*" RowDefinitions="Auto,*">
+                <Grid PointerPressed="HeaderPointerPressed">
+                    <Rectangle Fill="#01000000" />
+                    <TextBlock Margin="15,10" Text="{Binding Title}" />
+                </Grid>
 
-				<Grid Grid.Column="1" PointerPressed="HeaderPointerPressed">
-					<Rectangle Fill="#01000000"/>
+                <Grid Grid.Column="1" PointerPressed="HeaderPointerPressed">
+                    <Rectangle Fill="#01000000" />
 
-					<StackPanel Margin="20,10" Orientation="Horizontal">
-						<!--local:PathPresenter DataContext="{Binding AppState.SelectedTab^.CurrentLocation^.FullName.Path,Converter={StaticResource PathPreformatter}}"/-->
-						<TextBlock
-							Text="{Binding AppState.SelectedTab^.CurrentSelectedItem^.DisplayNameText}" Foreground="{StaticResource AccentBrush}" />
-					</StackPanel>
-				</Grid>
+                    <StackPanel Margin="20,10" Orientation="Horizontal">
+                        <!--  local:PathPresenter DataContext="{Binding AppState.SelectedTab^.CurrentLocation^.FullName.Path,Converter={StaticResource PathPreformatter}}"/  -->
+                        <TextBlock Foreground="{StaticResource AccentBrush}" Text="{Binding AppState.SelectedTab^.CurrentSelectedItem^.DisplayNameText}" />
+                    </StackPanel>
+                </Grid>
 
-				<Grid Grid.Column="1" Grid.Row="1" RowDefinitions="Auto,40,*,Auto">
+                <Grid
+                    Grid.Column="1"
+                    Grid.Row="1"
+                    RowDefinitions="Auto,40,*,Auto">
 
-					<ItemsControl
-							Grid.Row="1"
-							Items="{Binding AppState.Tabs}">
-						<ItemsControl.ItemsPanel>
-							<ItemsPanelTemplate>
-								<StackPanel Orientation="Horizontal" />
-							</ItemsPanelTemplate>
-						</ItemsControl.ItemsPanel>
-						<ItemsControl.ItemTemplate>
-							<DataTemplate>
-								<Grid RowDefinitions="Auto,1">
-									<StackPanel Orientation="Horizontal" Margin="20,0,20,0">
+                    <ItemsControl Grid.Row="1" Items="{Binding AppState.Tabs}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid RowDefinitions="Auto,1">
+                                    <StackPanel Margin="20,0,20,0" Orientation="Horizontal">
 
-										<TextBlock
-											VerticalAlignment="Center" Text="{Binding TabNumber,StringFormat=({0})}" />
+                                        <TextBlock Text="{Binding TabNumber, StringFormat=({0})}" VerticalAlignment="Center" />
 
-										<TextBlock
-											VerticalAlignment="Center" Margin="5,0,0,0" Text="{Binding CurrentLocation^.Name}" />
-									</StackPanel>
+                                        <TextBlock
+                                            Margin="5,0,0,0"
+                                            Text="{Binding CurrentLocation^.Name}"
+                                            VerticalAlignment="Center" />
+                                    </StackPanel>
 
-									<Rectangle Fill="{DynamicResource ForegroundBrush}" Grid.Row="1" IsVisible="{Binding IsSelected^}"/>
-								</Grid>
-							</DataTemplate>
-						</ItemsControl.ItemTemplate>
-					</ItemsControl>
+                                    <Rectangle
+                                        Fill="{DynamicResource ForegroundBrush}"
+                                        Grid.Row="1"
+                                        IsVisible="{Binding IsSelected^}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
 
-					<Grid
-						Grid.Row="2"
-						Margin="20,0,0,0">
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="15*" />
-								<ColumnDefinition Width="10" />
-								<ColumnDefinition Width="40*" />
-								<ColumnDefinition Width="10" />
-								<ColumnDefinition Width="45*" />
-							</Grid.ColumnDefinitions>
-
-
-							<Rectangle
-								Grid.Column="1"
-								Width="1"
-								Margin="0,10,0,10"
-								HorizontalAlignment="Center"
-								VerticalAlignment="Stretch"
-								Fill="{DynamicResource ContentSeparatorBrush}" />
+                    <Grid Grid.Row="2" Margin="20,0,0,0">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="15*" />
+                                <ColumnDefinition Width="10" />
+                                <ColumnDefinition Width="40*" />
+                                <ColumnDefinition Width="10" />
+                                <ColumnDefinition Width="45*" />
+                            </Grid.ColumnDefinitions>
 
 
-							<Grid Grid.Column="2" RowDefinitions="Auto,*">
-								<Grid IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.IsLoading^}">
-									<Image Width="40" Height="40" Source="{SvgImage /Assets/loading.svg}" Classes="LoadingAnimation"/>
-								</Grid>
-								<ListBox
-									Grid.Row="1"
-									x:Name="CurrentItems"
-									x:CompileBindings="False"
-									AutoScrollToSelectedItem="True"
-									IsTabStop="True"
-									Items="{Binding AppState.SelectedTab^.CurrentItems^}"
-									ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-									ScrollViewer.VerticalScrollBarVisibility="Visible"
-									Classes="ContentListView">
-									<ListBox.ItemTemplate>
-										<DataTemplate x:DataType="corevm:IItemViewModel">
-											<local:ItemView HorizontalContentAlignment="Stretch" HorizontalAlignment="Stretch"/>
-										</DataTemplate>
-									</ListBox.ItemTemplate>
-								</ListBox>
+                            <Rectangle
+                                Fill="{DynamicResource ContentSeparatorBrush}"
+                                Grid.Column="1"
+                                HorizontalAlignment="Center"
+                                Margin="0,10,0,10"
+                                VerticalAlignment="Stretch"
+                                Width="1" />
 
-								<TextBlock
-									Grid.Row="1"
-									x:CompileBindings="False"
-									x:Name="CurrentEmpty"
-									Margin="10"
-									HorizontalAlignment="Center"
-									FontWeight="Bold"
-									Foreground="{DynamicResource ErrorBrush}"
-									IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.Items^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}">
-									Empty
-								</TextBlock>
-							</Grid>
 
-							<Rectangle
-								Grid.Column="3"
-								Width="1"
-								Margin="0,10,0,10"
-								HorizontalAlignment="Center"
-								VerticalAlignment="Stretch"
-								Fill="{DynamicResource ContentSeparatorBrush}" />
+                            <Grid Grid.Column="2" RowDefinitions="Auto,*">
+                                <Grid IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.IsLoading^}">
+                                    <Image
+                                        Classes="LoadingAnimation"
+                                        Height="40"
+                                        Source="{SvgImage /Assets/loading.svg}"
+                                        Width="40" />
+                                </Grid>
+                                <ListBox
+                                    AutoScrollToSelectedItem="True"
+                                    Classes="ContentListView"
+                                    Grid.Row="1"
+                                    IsTabStop="True"
+                                    Items="{Binding AppState.SelectedTab^.CurrentItems^}"
+                                    ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                                    ScrollViewer.VerticalScrollBarVisibility="Visible"
+                                    x:CompileBindings="False"
+                                    x:Name="CurrentItems">
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate x:DataType="corevm:IItemViewModel">
+                                            <local:ItemView HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" />
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
 
-						</Grid>
-					</Grid>
-				</Grid>
-			</Grid>
-			<!--Borders-->
+                                <TextBlock
+                                    FontWeight="Bold"
+                                    Foreground="{DynamicResource ErrorBrush}"
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Center"
+                                    IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.Items^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}"
+                                    Margin="10"
+                                    x:CompileBindings="False"
+                                    x:Name="CurrentEmpty">
+                                    Empty
+                                </TextBlock>
+                            </Grid>
 
-		</Grid>
+                            <Rectangle
+                                Fill="{DynamicResource ContentSeparatorBrush}"
+                                Grid.Column="3"
+                                HorizontalAlignment="Center"
+                                Margin="0,10,0,10"
+                                VerticalAlignment="Stretch"
+                                Width="1" />
 
-		<Grid IsVisible="{Binding Loading}">
-			<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-				<Image Source="/Assets/filetime.ico" Width="128" Height="128"/>
-				<TextBlock Text="Loading..." HorizontalAlignment="Center" Margin="50"/>
-			</StackPanel>
-		</Grid>
-	</Grid>
+                            <Grid Grid.Column="4">
+                                <Grid IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^, Converter={x:Static ObjectConverters.IsNotNull}}">
+                                    <ListBox
+                                        AutoScrollToSelectedItem="True"
+                                        Classes="ContentListView"
+                                        IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^.Count, Converter={StaticResource NotEqualsConverter}, ConverterParameter=0}"
+                                        Items="{Binding AppState.SelectedTab^.SelectedsChildren^}"
+                                        x:CompileBindings="False"
+                                        x:Name="ChildItems">
+                                        <ListBox.ItemTemplate>
+                                            <DataTemplate x:DataType="corevm:IItemViewModel">
+                                                <local:ItemView />
+                                            </DataTemplate>
+                                        </ListBox.ItemTemplate>
+                                    </ListBox>
+
+                                    <TextBlock
+                                        FontWeight="Bold"
+                                        Foreground="{DynamicResource ErrorBrush}"
+                                        HorizontalAlignment="Center"
+                                        IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}"
+                                        Margin="10"
+                                        x:CompileBindings="False"
+                                        x:Name="ChildEmpty">
+                                        Empty
+                                    </TextBlock>
+                                </Grid>
+
+                                <Grid IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^, Converter={x:Static ObjectConverters.IsNull}, ConverterParameter=0}" RowDefinitions="Auto, Auto">
+                                    <TextBlock
+                                        Foreground="{DynamicResource ErrorBrush}"
+                                        HorizontalAlignment="Center"
+                                        Margin="0,0,0,10"
+                                        Text="There were some errors while opening container."
+                                        TextWrapping="Wrap" />
+
+                                    <ItemsRepeater Grid.Row="1" Items="{Binding AppState.SelectedTab^.CurrentSelectedItem^.BaseItem.Exceptions^}">
+                                        <ItemsRepeater.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Margin="5,0,5,10" Text="{Binding Converter={StaticResource ExceptionToStringConverter}}" />
+                                            </DataTemplate>
+                                        </ItemsRepeater.ItemTemplate>
+                                    </ItemsRepeater>
+                                </Grid>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Grid>
+            <!--  Borders  -->
+
+        </Grid>
+
+        <Grid IsVisible="{Binding Loading}">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Image
+                    Height="128"
+                    Source="/Assets/filetime.ico"
+                    Width="128" />
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    Margin="50"
+                    Text="Loading..." />
+            </StackPanel>
+        </Grid>
+    </Grid>
 </Window>
