--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -1,51 +1,65 @@
-<Window
-    Background="Transparent"
-    ExtendClientAreaToDecorationsHint="True"
-    Icon="/Assets/filetime.ico"
-    InputElement.KeyDown="OnKeyDown"
-    Opened="OnWindowOpened"
-    Title="FileTime"
-    TransparencyLevelHint="Blur"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    mc:Ignorable="d"
+﻿<Window
     x:Class="FileTime.GuiApp.Views.MainWindow"
-    x:CompileBindings="True"
-    x:DataType="vm:IMainWindowViewModelBase"
     xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:corevm="using:FileTime.App.Core.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:FileTime.GuiApp.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:FileTime.GuiApp.ViewModels"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    Title="FileTime"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:CompileBindings="True"
+    x:DataType="vm:IMainWindowViewModelBase"
+    Background="Transparent"
+    ExtendClientAreaToDecorationsHint="True"
+    Icon="/Assets/filetime.ico"
+    InputElement.KeyDown="OnKeyDown"
+    Opened="OnWindowOpened"
+    TransparencyLevelHint="Blur"
+    mc:Ignorable="d">
     <Design.DataContext>
         <vm:MainWindowViewModel />
     </Design.DataContext>
 
     <Grid Background="{DynamicResource AppBackgroundBrush}">
-        <Grid IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}}" x:DataType="vm:MainWindowViewModel">
-            <Grid ColumnDefinitions="250,*" RowDefinitions="Auto,*">
+        <Grid
+            x:DataType="vm:MainWindowViewModel"
+            IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}}">
+            <Grid
+                ColumnDefinitions="250,*"
+                RowDefinitions="Auto,*">
                 <Grid PointerPressed="HeaderPointerPressed">
                     <Rectangle Fill="#01000000" />
-                    <TextBlock Margin="15,10" Text="{Binding Title}" />
-                </Grid>
-
-                <Grid Grid.Column="1" PointerPressed="HeaderPointerPressed">
-                    <Rectangle Fill="#01000000" />
-
-                    <StackPanel Margin="20,10" Orientation="Horizontal">
-                        <!--  local:PathPresenter DataContext="{Binding AppState.SelectedTab^.CurrentLocation^.FullName.Path,Converter={StaticResource PathPreformatter}}"/  -->
-                        <TextBlock Foreground="{StaticResource AccentBrush}" Text="{Binding AppState.SelectedTab^.CurrentSelectedItem^.DisplayNameText}" />
-                    </StackPanel>
+                    <TextBlock
+                        Margin="15,10"
+                        Text="{Binding Title}" />
                 </Grid>
 
                 <Grid
                     Grid.Column="1"
+                    PointerPressed="HeaderPointerPressed">
+                    <Rectangle Fill="#01000000" />
+
+                    <StackPanel
+                        Margin="20,10"
+                        Orientation="Horizontal">
+                        <!--  local:PathPresenter DataContext="{Binding AppState.SelectedTab^.CurrentLocation^.FullName.Path,Converter={StaticResource PathPreformatter}}"/  -->
+                        <TextBlock
+                            Foreground="{StaticResource AccentBrush}"
+                            Text="{Binding AppState.SelectedTab^.CurrentSelectedItem^.DisplayNameText}" />
+                    </StackPanel>
+                </Grid>
+
+                <Grid
                     Grid.Row="1"
+                    Grid.Column="1"
                     RowDefinitions="Auto,40,*,Auto">
 
-                    <ItemsControl Grid.Row="1" Items="{Binding AppState.Tabs}">
+                    <ItemsControl
+                        Grid.Row="1"
+                        Items="{Binding AppState.Tabs}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <StackPanel Orientation="Horizontal" />
@@ -54,26 +68,32 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Grid RowDefinitions="Auto,1">
-                                    <StackPanel Margin="20,0,20,0" Orientation="Horizontal">
+                                    <StackPanel
+                                        Margin="20,0,20,0"
+                                        Orientation="Horizontal">
 
-                                        <TextBlock Text="{Binding TabNumber, StringFormat=({0})}" VerticalAlignment="Center" />
+                                        <TextBlock
+                                            VerticalAlignment="Center"
+                                            Text="{Binding TabNumber, StringFormat=({0})}" />
 
                                         <TextBlock
                                             Margin="5,0,0,0"
-                                            Text="{Binding CurrentLocation^.Name}"
-                                            VerticalAlignment="Center" />
+                                            VerticalAlignment="Center"
+                                            Text="{Binding CurrentLocation^.Name}" />
                                     </StackPanel>
 
                                     <Rectangle
-                                        Fill="{DynamicResource ForegroundBrush}"
                                         Grid.Row="1"
+                                        Fill="{DynamicResource ForegroundBrush}"
                                         IsVisible="{Binding IsSelected^}" />
                                 </Grid>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
 
-                    <Grid Grid.Row="2" Margin="20,0,0,0">
+                    <Grid
+                        Grid.Row="2"
+                        Margin="20,0,0,0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="15*" />
@@ -85,69 +105,73 @@
 
 
                             <Rectangle
-                                Fill="{DynamicResource ContentSeparatorBrush}"
                                 Grid.Column="1"
-                                HorizontalAlignment="Center"
+                                Width="1"
                                 Margin="0,10,0,10"
+                                HorizontalAlignment="Center"
                                 VerticalAlignment="Stretch"
-                                Width="1" />
+                                Fill="{DynamicResource ContentSeparatorBrush}" />
 
 
-                            <Grid Grid.Column="2" RowDefinitions="Auto,*">
+                            <Grid
+                                Grid.Column="2"
+                                RowDefinitions="Auto,*">
                                 <Grid IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.IsLoading^}">
                                     <Image
-                                        Classes="LoadingAnimation"
+                                        Width="40"
                                         Height="40"
-                                        Source="{SvgImage /Assets/loading.svg}"
-                                        Width="40" />
+                                        Classes="LoadingAnimation"
+                                        Source="{SvgImage /Assets/loading.svg}" />
                                 </Grid>
                                 <ListBox
+                                    x:Name="CurrentItems"
+                                    Grid.Row="1"
+                                    x:CompileBindings="False"
                                     AutoScrollToSelectedItem="True"
                                     Classes="ContentListView"
-                                    Grid.Row="1"
                                     IsTabStop="True"
                                     Items="{Binding AppState.SelectedTab^.CurrentItems^}"
                                     ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                                    ScrollViewer.VerticalScrollBarVisibility="Visible"
-                                    x:CompileBindings="False"
-                                    x:Name="CurrentItems">
+                                    ScrollViewer.VerticalScrollBarVisibility="Visible">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate x:DataType="corevm:IItemViewModel">
-                                            <local:ItemView HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" />
+                                            <local:ItemView
+                                                HorizontalAlignment="Stretch"
+                                                HorizontalContentAlignment="Stretch" />
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 </ListBox>
 
                                 <TextBlock
+                                    x:Name="CurrentEmpty"
+                                    Grid.Row="1"
+                                    Margin="10"
+                                    HorizontalAlignment="Center"
+                                    x:CompileBindings="False"
                                     FontWeight="Bold"
                                     Foreground="{DynamicResource ErrorBrush}"
-                                    Grid.Row="1"
-                                    HorizontalAlignment="Center"
-                                    IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.Items^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}"
-                                    Margin="10"
-                                    x:CompileBindings="False"
-                                    x:Name="CurrentEmpty">
+                                    IsVisible="{Binding AppState.SelectedTab^.CurrentLocation^.Items^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}">
                                     Empty
                                 </TextBlock>
                             </Grid>
 
                             <Rectangle
-                                Fill="{DynamicResource ContentSeparatorBrush}"
                                 Grid.Column="3"
-                                HorizontalAlignment="Center"
+                                Width="1"
                                 Margin="0,10,0,10"
+                                HorizontalAlignment="Center"
                                 VerticalAlignment="Stretch"
-                                Width="1" />
+                                Fill="{DynamicResource ContentSeparatorBrush}" />
 
                             <Grid Grid.Column="4">
                                 <Grid IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^, Converter={x:Static ObjectConverters.IsNotNull}}">
                                     <ListBox
+                                        x:Name="ChildItems"
+                                        x:CompileBindings="False"
                                         AutoScrollToSelectedItem="True"
                                         Classes="ContentListView"
                                         IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^.Count, Converter={StaticResource NotEqualsConverter}, ConverterParameter=0}"
-                                        Items="{Binding AppState.SelectedTab^.SelectedsChildren^}"
-                                        x:CompileBindings="False"
-                                        x:Name="ChildItems">
+                                        Items="{Binding AppState.SelectedTab^.SelectedsChildren^}">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate x:DataType="corevm:IItemViewModel">
                                                 <local:ItemView />
@@ -156,29 +180,35 @@
                                     </ListBox>
 
                                     <TextBlock
+                                        x:Name="ChildEmpty"
+                                        Margin="10"
+                                        HorizontalAlignment="Center"
+                                        x:CompileBindings="False"
                                         FontWeight="Bold"
                                         Foreground="{DynamicResource ErrorBrush}"
-                                        HorizontalAlignment="Center"
-                                        IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}"
-                                        Margin="10"
-                                        x:CompileBindings="False"
-                                        x:Name="ChildEmpty">
+                                        IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^.Count, Converter={StaticResource EqualityConverter}, ConverterParameter=0}">
                                         Empty
                                     </TextBlock>
                                 </Grid>
 
-                                <Grid IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^, Converter={x:Static ObjectConverters.IsNull}, ConverterParameter=0}" RowDefinitions="Auto, Auto">
+                                <Grid
+                                    IsVisible="{Binding AppState.SelectedTab^.SelectedsChildren^, Converter={x:Static ObjectConverters.IsNull}, ConverterParameter=0}"
+                                    RowDefinitions="Auto, Auto">
                                     <TextBlock
-                                        Foreground="{DynamicResource ErrorBrush}"
-                                        HorizontalAlignment="Center"
                                         Margin="0,0,0,10"
+                                        HorizontalAlignment="Center"
+                                        Foreground="{DynamicResource ErrorBrush}"
                                         Text="There were some errors while opening container."
                                         TextWrapping="Wrap" />
 
-                                    <ItemsRepeater Grid.Row="1" Items="{Binding AppState.SelectedTab^.CurrentSelectedItem^.BaseItem.Exceptions^}">
+                                    <ItemsRepeater
+                                        Grid.Row="1"
+                                        Items="{Binding AppState.SelectedTab^.CurrentSelectedItem^.BaseItem.Exceptions^}">
                                         <ItemsRepeater.ItemTemplate>
                                             <DataTemplate>
-                                                <TextBlock Margin="5,0,5,10" Text="{Binding Converter={StaticResource ExceptionToStringConverter}}" />
+                                                <TextBlock
+                                                    Margin="5,0,5,10"
+                                                    Text="{Binding Converter={StaticResource ExceptionToStringConverter}}" />
                                             </DataTemplate>
                                         </ItemsRepeater.ItemTemplate>
                                     </ItemsRepeater>
@@ -193,14 +223,16 @@
         </Grid>
 
         <Grid IsVisible="{Binding Loading}">
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
                 <Image
+                    Width="128"
                     Height="128"
-                    Source="/Assets/filetime.ico"
-                    Width="128" />
+                    Source="/Assets/filetime.ico" />
                 <TextBlock
-                    HorizontalAlignment="Center"
                     Margin="50"
+                    HorizontalAlignment="Center"
                     Text="Loading..." />
             </StackPanel>
         </Grid>
