--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -26,11 +26,12 @@
 
     <Grid Background="{DynamicResource AppBackgroundBrush}">
         <Grid
-            x:DataType="vm:MainWindowViewModel"
-            IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}}">
+            x:DataType="vm:MainWindowViewModel">
             <Grid
                 ColumnDefinitions="250,*"
-                RowDefinitions="Auto,*">
+                RowDefinitions="Auto,*"
+                IsVisible="{Binding Loading, Converter={x:Static BoolConverters.Not}}">
+
                 <Grid PointerPressed="HeaderPointerPressed">
                     <Rectangle Fill="#01000000" />
                     <TextBlock
@@ -52,6 +53,179 @@
                             Text="{Binding AppState.SelectedTab^.CurrentSelectedItem^.DisplayNameText}" />
                     </StackPanel>
                 </Grid>
+
+				<Grid Grid.Row="1" RowDefinitions="Auto,Auto,Auto,Auto">
+
+					<Border CornerRadius="10" Background="{DynamicResource ContainerBackgroundBrush}" Padding="10" Margin="10">
+						<Grid RowDefinitions="Auto,Auto">
+
+							<TextBlock
+								Margin="0,0,0,10"
+								Text="Drives" />
+
+							<ItemsRepeater
+								Grid.Row="1"
+								Items="{Binding AppState.RootDriveInfos.Collection}">
+								<ItemsRepeater.ItemTemplate>
+									<DataTemplate x:DataType="vm:RootDriveInfo">
+										<Grid Classes="SidebarContainerPresenter" PointerPressed="OnHasContainerPointerPressed" Cursor="Hand">
+											<Grid Margin="0,5" ColumnDefinitions="Auto,*,Auto" RowDefinitions="Auto,Auto">
+												<Image
+													Grid.RowSpan="2"
+													Width="20"
+													Height="20"
+													HorizontalAlignment="Left"
+													VerticalAlignment="Center"
+													Source="{SvgImage /Assets/material/folder.svg}" />
+
+												<StackPanel
+													Grid.Column="1"
+													VerticalAlignment="Center"
+													HorizontalAlignment="Stretch"
+													Orientation="Horizontal">
+
+													<TextBlock
+														Margin="5,0,0,0"
+														VerticalAlignment="Center"
+														Text="{Binding FullName}" />
+
+													<TextBlock
+														Margin="5,0,0,0"
+														VerticalAlignment="Center"
+														Classes="ExtraSmallText"
+														Text="{Binding Label}" IsVisible="{Binding Label,Converter={x:Static StringConverters.IsNotNullOrEmpty}}" />
+												</StackPanel>
+
+												<StackPanel
+													HorizontalAlignment="Right"
+													Grid.Column="2"
+													Orientation="Horizontal"
+													VerticalAlignment="Center">
+
+													<TextBlock Classes="SmallText" VerticalAlignment="Center" Text="{Binding Free, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}">
+													</TextBlock>
+
+													<TextBlock Classes="SmallText" VerticalAlignment="Center" Text=" / ">
+													</TextBlock>
+
+													<TextBlock Classes="SmallText" VerticalAlignment="Center" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}">
+													</TextBlock>
+												</StackPanel>
+
+												<ProgressBar
+													Margin="5,0,0,0"
+													Grid.Column="1"
+													Grid.ColumnSpan="2"
+													Grid.Row="1"
+													MinWidth="100"
+													HorizontalAlignment="Stretch"
+													Maximum="100"
+													Value="{Binding UsedPercentage}" />
+											</Grid>
+										</Grid>
+									</DataTemplate>
+								</ItemsRepeater.ItemTemplate>
+							</ItemsRepeater>
+						</Grid>
+					</Border>
+
+					<!--Border Grid.Row="1" CornerRadius="10" Background="{DynamicResource ContainerBackgroundBrush}" Padding="0,10" Margin="10">
+						<Grid RowDefinitions="Auto,Auto">
+
+							<TextBlock
+								Margin="10,0,10,10"
+								Text="Places" />
+
+							<ItemsRepeater
+								Grid.Row="1"
+								Items="{Binding Places}">
+								<ItemsRepeater.ItemTemplate>
+									<DataTemplate>
+										<Grid Classes="SidebarContainerPresenter" PointerPressed="OnHasContainerPointerPressed" Cursor="Hand">
+											<StackPanel Orientation="Horizontal" Margin="10,5" HorizontalAlignment="Stretch">
+												<Image
+													Width="20"
+													Height="20"
+													VerticalAlignment="Center"
+													Source="{Binding Container,Converter={StaticResource ItemToImageConverter}}" />
+
+												<TextBlock
+													Margin="5,0,0,0"
+													VerticalAlignment="Center"
+													Text="{Binding Name}" />
+											</StackPanel>
+										</Grid>
+									</DataTemplate>
+								</ItemsRepeater.ItemTemplate>
+							</ItemsRepeater>
+						</Grid>
+					</Border>
+
+					<Border Grid.Row="2" CornerRadius="10" Background="{DynamicResource ContainerBackgroundBrush}" Padding="0,10" Margin="10">
+						<Grid RowDefinitions="Auto,Auto">
+
+							<TextBlock
+								Margin="10,0,10,10"
+								Text="Favorites" />
+
+							<ItemsRepeater
+								Grid.Row="1"
+								Items="{Binding AppState.FavoriteElements}">
+								<ItemsRepeater.ItemTemplate>
+									<DataTemplate>
+										<Grid Classes="SidebarContainerPresenter" PointerPressed="OnHasContainerPointerPressed" Cursor="Hand">
+											<StackPanel Orientation="Horizontal" Margin="10,5" HorizontalAlignment="Stretch">
+												<Image
+													Width="20"
+													Height="20"
+													VerticalAlignment="Center"
+													Source="{Binding Converter={StaticResource ItemToImageConverter}}" />
+
+												<TextBlock
+													Margin="5,0,0,0"
+													VerticalAlignment="Center"
+													Text="{Binding Name}" />
+											</StackPanel>
+										</Grid>
+									</DataTemplate>
+								</ItemsRepeater.ItemTemplate>
+							</ItemsRepeater>
+						</Grid>
+					</Border>
+
+					<Border Grid.Row="3" CornerRadius="10" Background="{DynamicResource ContainerBackgroundBrush}" Padding="0,10" Margin="10">
+						<Grid RowDefinitions="Auto,Auto">
+
+							<TextBlock
+								Margin="10,0,10,10"
+								Text="History" />
+
+							<ItemsRepeater
+								Grid.Row="1"
+								Items="{Binding AppState.SelectedTab.History}">
+								<ItemsRepeater.ItemTemplate>
+									<DataTemplate>
+										<Grid Classes="SidebarContainerPresenter" PointerPressed="OnHasContainerPointerPressed" Cursor="Hand">
+											<StackPanel Orientation="Horizontal" Margin="10,5" HorizontalAlignment="Stretch">
+												<Image
+													Width="20"
+													Height="20"
+													VerticalAlignment="Center"
+													Source="{Binding Container,Converter={StaticResource ItemToImageConverter}}" />
+
+												<TextBlock
+													Margin="5,0,0,0"
+													VerticalAlignment="Center"
+													Text="{Binding Name}" />
+											</StackPanel>
+										</Grid>
+									</DataTemplate>
+								</ItemsRepeater.ItemTemplate>
+							</ItemsRepeater>
+						</Grid>
+					</Border-->				
+					
+				</Grid>
 
                 <Grid
                     Grid.Row="1"
