--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/App.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/App.axaml
@@ -6,189 +6,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="AppBackgroundColor">#E7073642</Color>
-            <Color x:Key="ContainerBackgroundColor">#083e4c</Color>
-            <Color x:Key="TransparentContainerBackgroundColor">#D0083e4c</Color>
-            <Color x:Key="BarelyTransparentBackgroundColor">#80083e4c</Color>
-
-            <Color x:Key="ItemBackgroundColor">#00000000</Color>
-            <Color x:Key="AlternativeItemBackgroundColor">#10000000</Color>
-            <Color x:Key="SelectedItemBackgroundColor">#93a1a1</Color>
-            <Color x:Key="MarkedItemBackgroundColor">#00000000</Color>
-            <Color x:Key="MarkedAlternativeItemBackgroundColor">#10000000</Color>
-            <Color x:Key="MarkedSelectedItemBackgroundColor">#b58900</Color>
-
-            <Color x:Key="ForegroundColor">#93a1a1</Color>
-            <Color x:Key="AccentColor">#268bd2</Color>
-            <Color x:Key="AccentComplementColor">#fdf6e3</Color>
-            <Color x:Key="LightForegroundColor">#7793a1a1</Color>
-            <Color x:Key="AlternativeItemForegroundColor">#93a1a1</Color>
-            <Color x:Key="SelectedItemForegroundColor">#073642</Color>
-            <Color x:Key="MarkedItemForegroundColor">#b58900</Color>
-            <Color x:Key="MarkedAlternativeItemForegroundColor">#b58900</Color>
-            <Color x:Key="MarkedSelectedItemForegroundColor">#002b36</Color>
-
-            <Color x:Key="ErrorColor">#dc322f</Color>
-
-            <LinearGradientBrush x:Key="ContentSeparatorBrush">
-                <GradientStop Color="#0093a1a1" Offset="0" />
-                <GradientStop Color="#93a1a1" Offset="0.5" />
-                <GradientStop Color="#0093a1a1" Offset="1" />
-            </LinearGradientBrush>
-
-            <LinearGradientBrush x:Key="ContainerGradientBackgroundBrush">
-                <GradientStop Color="#00b58900" Offset="0" />
-                <GradientStop Color="#CCb58900" Offset="0.4" />
-                <GradientStop Color="#CCb58900" Offset="0.6" />
-                <GradientStop Color="#00b58900" Offset="1" />
-            </LinearGradientBrush>
-
-
-            <SolidColorBrush Color="{DynamicResource AppBackgroundColor}" x:Key="AppBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource ContainerBackgroundColor}" x:Key="ContainerBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource TransparentContainerBackgroundColor}"
-                             x:Key="TransparentContainerBackgroundBrush" />
-
-            <SolidColorBrush Color="{DynamicResource ItemBackgroundColor}" x:Key="ItemBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource AlternativeItemBackgroundColor}"
-                             x:Key="AlternativeItemBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource SelectedItemBackgroundColor}" x:Key="SelectedItemBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource MarkedItemBackgroundColor}" x:Key="MarkedItemBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource MarkedSelectedItemBackgroundColor}"
-                             x:Key="MarkedSelectedItemBackgroundBrush" />
-            <SolidColorBrush Color="{DynamicResource MarkedAlternativeItemBackgroundColor}"
-                             x:Key="MarkedAlternativeItemBackgroundBrush" />
-
-            <SolidColorBrush Color="{DynamicResource ForegroundColor}" x:Key="ForegroundBrush" />
-            <SolidColorBrush Color="{DynamicResource AccentColor}" x:Key="AccentBrush" />
-            <SolidColorBrush Color="{DynamicResource AccentComplementColor}" x:Key="AccentComplementBrush" />
-            <SolidColorBrush Color="{DynamicResource LightForegroundColor}" x:Key="LightForegroundBrush" />
-            <SolidColorBrush Color="{DynamicResource AlternativeItemForegroundColor}"
-                             x:Key="AlternativeItemForegroundBrush" />
-            <SolidColorBrush Color="{DynamicResource SelectedItemForegroundColor}" x:Key="SelectedItemForegroundBrush" />
-            <SolidColorBrush Color="{DynamicResource MarkedItemForegroundColor}" x:Key="MarkedItemForegroundBrush" />
-            <SolidColorBrush Color="{DynamicResource MarkedAlternativeItemForegroundColor}"
-                             x:Key="MarkedAlternativeItemForegroundBrush" />
-            <SolidColorBrush Color="{DynamicResource MarkedSelectedItemForegroundColor}"
-                             x:Key="MarkedSelectedItemForegroundBrush" />
-
-            <SolidColorBrush Color="{DynamicResource ErrorColor}" x:Key="ErrorBrush" />
-
-
-            <SolidColorBrush Color="{DynamicResource SelectedItemBackgroundColor}"
-                             x:Key="SystemControlHighlightListAccentLowBrush" />
-
-
-            <converters:ItemViewModeToBrushConverter
-                AlternativeBrush="{StaticResource AlternativeItemForegroundBrush}"
-                DefaultBrush="{StaticResource ForegroundBrush}"
-                MarkedAlternativeBrush="{StaticResource MarkedAlternativeItemForegroundBrush}"
-                MarkedBrush="{StaticResource MarkedItemForegroundBrush}"
-                MarkedSelectedBrush="{StaticResource MarkedSelectedItemForegroundBrush}"
-                SelectedBrush="{StaticResource SelectedItemForegroundBrush}"
-                x:Key="ItemViewModeToForegroundConverter" />
-            <converters:ItemViewModeToBrushConverter
-                AlternativeBrush="{StaticResource AlternativeItemBackgroundBrush}"
-                DefaultBrush="{StaticResource ItemBackgroundBrush}"
-                MarkedAlternativeBrush="{StaticResource MarkedAlternativeItemBackgroundBrush}"
-                MarkedBrush="{StaticResource MarkedItemBackgroundBrush}"
-                MarkedSelectedBrush="{StaticResource MarkedSelectedItemBackgroundBrush}"
-                SelectedBrush="{StaticResource SelectedItemBackgroundBrush}"
-                x:Key="ItemViewModeToBackgroundConverter" />
-            <converters:NamePartShrinkerConverter x:Key="NamePartShrinkerConverter" />
-            <converters:ItemViewModelIsAttributeTypeConverter x:Key="ItemViewModelIsAttributeTypeConverter" />
-            <converters:ItemViewModelIsAttributeTypeConverter Invert="true"
-                                                              x:Key="ItemViewModelIsNotAttributeTypeConverter" />
-            <converters:GetFileExtensionConverter x:Key="GetFileExtensionConverter" />
-            <converters:FormatSizeConverter x:Key="FormatSizeConverter" />
-            <converters:DateTimeConverter x:Key="DateTimeConverter" />
-            <converters:SplitStringConverter x:Key="SplitStringConverter" />
-            <converters:CompareConverter x:Key="EqualityConverter" />
-            <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}"
-                                         x:Key="NotEqualsConverter" />
-            <converters:ExceptionToStringConverter x:Key="ExceptionToStringConverter" />
-            <converters:CommandToCommandNameConverter x:Key="CommandToCommandNameConverter" />
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceInclude Source="avares://FileTime.GuiApp/Resources/SolarizedDarkTheme.axaml"></ResourceInclude>
+                <ResourceInclude Source="avares://FileTime.GuiApp/Resources/Brushes.axaml"></ResourceInclude>
+                <ResourceInclude Source="avares://FileTime.GuiApp/Resources/Converters.axaml"></ResourceInclude>
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 
     <Application.Styles>
-        <FluentTheme Mode="Dark" />
-
-        <Style Selector="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}" />
-            <Setter Property="FontSize" Value="16" />
-        </Style>
-        <Style Selector="TextBlock.SmallText">
-            <Setter Property="FontSize" Value="12" />
-        </Style>
-        <Style Selector="TextBlock.ExtraSmallText">
-            <Setter Property="FontSize" Value="11" />
-        </Style>
-        <Style Selector="TextBox">
-            <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}" />
-            <Setter Property="Background" Value="{DynamicResource ContainerBackgroundBrush}" />
-        </Style>
-        <Style Selector="ListBox.ContentListView">
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-        </Style>
-        <Style Selector="ListBox.ContentListView &gt; ListBoxItem">
-            <Setter Property="Margin" Value="0" />
-            <Setter Property="Padding" Value="0" />
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <!--Setter Property="ContextMenu">
-				<ContextMenu Items="{Binding Converter={StaticResource ContextMenuGenerator}}"/>
-			</Setter-->
-        </Style>
-
-        <Style Selector="Grid.SidebarContainerPresenter">
-            <Setter Property="Background" Value="#01000000" />
-        </Style>
-
-        <Style Selector="Grid.SidebarContainerPresenter:pointerover">
-            <Setter Property="Background" Value="{DynamicResource AppBackgroundColor}" />
-        </Style>
-
-        <Style Selector="Border.SelectedTimelineCommand">
-            <Setter Property="BorderBrush" Value="{DynamicResource ForegroundBrush}" />
-        </Style>
-
-        <Style Selector="ListBox.RadioButtonListBox">
-            <Setter Property="BorderBrush" Value="Transparent" />
-            <Setter Property="Background" Value="Transparent" />
-        </Style>
-        <Style Selector="ListBox.RadioButtonListBox ListBoxItem">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <Border>
-                            <RadioButton
-                                Content="{TemplateBinding ContentPresenter.Content}"
-                                Foreground="{DynamicResource ForegroundBrush}"
-                                IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                                VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style Selector="Image.LoadingAnimation">
-            <Style.Animations>
-                <Animation
-                    Duration="0:0:2"
-                    Easing="QuadraticEaseInOut"
-                    IterationCount="INFINITE">
-                    <KeyFrame Cue="0%">
-                        <Setter Property="RotateTransform.Angle" Value="45" />
-                    </KeyFrame>
-                    <KeyFrame Cue="100%">
-                        <Setter Property="RotateTransform.Angle" Value="405" />
-                    </KeyFrame>
-                </Animation>
-            </Style.Animations>
-        </Style>
+        <StyleInclude Source="avares://FileTime.GuiApp/Resources/Styles.axaml" />
     </Application.Styles>
 </Application>
